# App_PO

./: CMakeLists.txt  CMakeLists.txt.user.9571531  datamap  podb  scenario
Preparations/: scenario
include/: Enums.h  Functions.h  mainwindow.h
include/models/: EmployeeModel.h  GroupModel.h  LabelModel.h  SubjectModel.h
include/widgets/: connectingwidget.h  employeeswidget.h  groupswidget.h  labeldetailwidget.h  labelswidget.h  subjectswidget.h
resources/: stylesheet.qrc  stylesheet.qss
src/: main.cpp  mainwindow.cpp  mainwindow.ui
src/models/: EmployeeModel.cpp  GroupModel.cpp  LabelModel.cpp  SubjectModel.cpp
src/widgets/: connectingwidget.cpp  employeeswidget.cpp  groupswidget.cpp  labeldetailwidget.cpp  labelswidget.cpp  subjectswidget.cpp
